# nommie

./: .cursorrules  .dockerignore  .env.example  .eslintignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_IMPROVEMENTS_REPORT.md  README.md  clippy.toml  dev-roadmap.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
apps/backend/: .env.example  Cargo.toml  Dockerfile  package.json
apps/backend/.config/: nextest.toml
apps/backend/migration/: Cargo.toml
apps/backend/migration/src/: lib.rs  m20250823_000001_init.rs  main.rs
apps/backend/src/: error.rs  health.rs  lib.rs  main.rs  routes.rs  telemetry.rs
apps/backend/src/adapters/: games_sea.rs  memberships_sea.rs  mod.rs  players_sea.rs  users_sea.rs
apps/backend/src/ai/: chatgpt_heuristic.rs  config.rs  heuristic.rs  memory.rs  mod.rs  random.rs  reckoner.rs  registry.rs  strategic.rs  tactician.rs  trait_def.rs
apps/backend/src/auth/: claims.rs  google.rs  jwt.rs  mod.rs  session.rs
apps/backend/src/authz/: capability.rs  mod.rs  policy.rs  principal.rs
apps/backend/src/bin_support/: config_app.rs  mod.rs  tls_checks.rs
apps/backend/src/bootstrap/: db.rs  mod.rs
apps/backend/src/config/: db.rs  email_allowlist.rs  mod.rs  tls.rs
apps/backend/src/db/: mod.rs  shared_pool_cache.rs  txn.rs  txn_policy.rs
apps/backend/src/domain/: bidding.rs  cards.rs  cards_logic.rs  cards_parsing.rs  cards_serde.rs  cards_types.rs  dealing.rs  domain_prop_helpers.rs  errors.rs  fixtures.rs  game_context.rs  game_transition.rs  mod.rs  player_view.rs  round_memory.rs  rules.rs  scoring.rs  seed_derivation.rs  snapshot.rs  state.rs  test_gens.rs  test_prelude.rs  test_state_helpers.rs  tests.rs  tests_bidding.rs  tests_consecutive_zeros.rs  tests_conversions.rs  tests_domain_consistency.rs  tests_domain_dealing.rs  tests_game_transition.rs  tests_integration.rs  tests_props_bidding.rs  tests_props_consistency.rs  tests_props_legality.rs  tests_props_trick_winner.rs  tests_props_tricks.rs  tests_scoring.rs  tests_snapshot_phases.rs  tests_tricks.rs  tricks.rs
apps/backend/src/entities/: admin_audit_log.rs  ai_overrides.rs  ai_profiles.rs  allowed_emails.rs  game_players.rs  game_rounds.rs  games.rs  mod.rs  round_bids.rs  round_hands.rs  round_scores.rs  round_tricks.rs  trick_plays.rs  user_auth_identities.rs  user_credentials.rs  user_options.rs  users.rs
apps/backend/src/errors/: domain.rs  error_code.rs  mod.rs  tests_error_codes_unique.rs  tests_error_mapping.rs
apps/backend/src/extractors/: admin_principal.rs  auth_token.rs  backend_auth.rs  cached_game_context.rs  current_user.rs  current_user_db.rs  game_id.rs  game_membership.rs  jwt.rs  mod.rs  validated_json.rs
apps/backend/src/http/: etag.rs  mod.rs
apps/backend/src/infra/: db.rs  db_errors.rs  mock_strict.rs  mod.rs  schema_guard.rs  state.rs
apps/backend/src/infra/db/: mod.rs  (+3 more)
apps/backend/src/logging/: mod.rs  pii.rs  security.rs
apps/backend/src/middleware/: cors.rs  db_readiness_reporter.rs  jwt_extract.rs  mod.rs  rate_limit.rs  readiness_gate.rs  request_trace.rs  security_headers.rs  session_extract.rs  structured_logger.rs  trace_span.rs
apps/backend/src/protocol/: game_state.rs
apps/backend/src/readiness/: manager.rs  mod.rs  monitor.rs  types.rs
apps/backend/src/repos/: admin_audit_log.rs  admin_users.rs  ai_overrides.rs  ai_profiles.rs  allowed_emails.rs  auth_identities.rs  bids.rs  games.rs  hands.rs  memberships.rs  mod.rs  player_view.rs  players.rs  plays.rs  rounds.rs  scores.rs  tricks.rs  user_options.rs  users.rs
apps/backend/src/routes/: admin.rs  auth.rs  games.rs  health.rs  mod.rs  private.rs  realtime.rs  snapshot_cache.rs  user.rs  user_options.rs
apps/backend/src/services/: admin.rs  ai.rs  game_flow.rs  games.rs  memberships.rs  mod.rs  players.rs  round_cache.rs  round_context.rs  users.rs
apps/backend/src/state/: admission_mode.rs  app_state.rs  mod.rs  security_config.rs
apps/backend/src/test_bootstrap/: logging.rs
apps/backend/src/test_support/: app_builder.rs  factories.rs  logging.rs  migrations.rs  mod.rs  schema_guard.rs  state_builder.rs
apps/backend/src/utils/: join_code.rs  mod.rs  unique.rs
apps/backend/src/web/: mod.rs  trace_ctx.rs
apps/backend/src/ws/: broker.rs  game.rs  hub.rs  mod.rs  protocol.rs  session.rs
apps/backend/tests/: adapters_bids_sea_test.rs  adapters_games_sea_test.rs  adapters_hands_sea_test.rs  adapters_memberships_sea_test.rs  adapters_players_sea_test.rs  adapters_plays_sea_test.rs  adapters_rounds_sea_test.rs  adapters_scores_sea_test.rs  adapters_sentinel_games_sea_test.rs  adapters_tests.rs  adapters_tricks_sea_test.rs  adapters_users_sea_test.rs  ai_conformance.rs  ai_memory_degradation_test.rs  ai_memory_test.rs  auth_extractor_test.rs  auth_login.rs  auth_login_negative.rs  auth_login_test.rs  auth_tests.rs  commit_policy_tests.rs  db_txn_tests.rs  dealer_bid_restriction_test.rs  domain_bidding_props.rs  domain_dealing_props.rs  domain_error_mapping.rs  domain_prop_tests.rs  domain_prop_tests_consistency.rs  domain_prop_tests_legality.rs  domain_prop_tests_trick_winner.rs  domain_tricks_props.rs  error_codes_unique.rs  error_mappings_test.rs  error_shape.rs  extractors_auth_test.rs  extractors_current_user_db_test.rs  extractors_game_id.rs  extractors_game_membership_roles_test.rs  extractors_game_membership_test.rs  extractors_game_membership_tests.rs  (+45 more)
apps/backend/tests/common/: mod.rs  proptest_prelude.rs
apps/backend/tests/support/: ai_memory_helpers.rs  app_builder.rs  auth.rs  card_helpers.rs  db_games.rs  db_memberships.rs  domain_gens.rs  domain_prop_helpers.rs  factory.rs  game_phases.rs  game_setup.rs  game_state.rs  games_sea_helpers.rs  logging.rs  mock_strict.rs  mod.rs  shared_txn.rs  snapshot_helpers.rs  state_builder_ext.rs  state_helpers.rs  test_init.rs  test_middleware.rs  test_state.rs  test_utils.rs  trick_helpers.rs  txn_helpers.rs  websocket.rs  websocket_client.rs
apps/migration-cli/: Cargo.toml
apps/migration-cli/src/: main.rs
(+533 files in other folders)
