[workspace]
members = [
    "apps/backend",
    "apps/migration-cli",
    "packages/migration",
    "packages/backend-test-support",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sea-orm = "1.1"

[patch.crates-io]
num-bigint-dig = { version = "0.8.6" }
