[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["macros"] }
actix-cors = "0.7"
actix-http = "3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-time"] }
once_cell = "1.19"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
jsonwebtoken = "9.0"
time = { version = "0.3", features = ["serde", "macros"] }
rand = "0.8"
log = "0.4"
ulid = "1.2.1"
backend-test-support = { path = "../../packages/backend-test-support", optional = true }

[features]
mockstrict-default = ["sea-orm/mock", "dep:backend-test-support"]

[dev-dependencies]
ctor = "0.2"
serial_test = "3.2.0"
tracing-test = "0.2"
sea-orm = { version = "1.1", features = ["mock"] }

[[bin]]
name = "backend"
path = "src/main.rs"
