[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server framework
actix = "0.13"
actix-web = { version = "4", features = ["macros"] }
actix-cors = "0.7"
actix-http = "3"
actix-web-actors = "4"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
tokio-stream = "0.1"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sea-orm = { version = "1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-time"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }

# Error handling and logging
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Authentication and security
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
actix-extensible-rate-limit = "0.4.0"

# Data types and utilities
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.0"
ulid = "1.2.1"
time = { version = "0.3", features = ["serde", "macros"] }
once_cell = "1.19"
percent-encoding = "2"

# String and data processing
bytes = "1.0"
regex = "1"
unicode-normalization = "0.1"

# Concurrency and hashing
rand = "0.9"
dashmap = "6"
moka = { version = "0.12", features = ["future"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# File system
fd-lock = "4"
fs4 = "0.13"

# Internal packages
migration = { path = "../../packages/migration" }

[dev-dependencies]
# Testing
ctor = "0.6"
serial_test = "3.2.0"
proptest = "1.9"
tempfile = "3.8"
tracing-timing = "0.7"

# Internal test packages
backend-test-support = { path = "../../packages/backend-test-support" }

[[bin]]
name = "backend"
path = "src/main.rs"
test = false
