[package]
name = "migration-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
clap = { version = "4", features = ["derive"] }
backend = { path = "../backend" }
migration = { path = "../../packages/migration" }

[[bin]]
name = "migration"
path = "src/main.rs"
