[package]
name = "migration-cli"
edition.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
clap = { version = "4", features = ["derive"] }
migration = { path = "../../packages/migration" }
db-infra = { path = "../../packages/db-infra" }

[[bin]]
name = "migration"
path = "src/main.rs"
