[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "cli", "sqlx-postgres"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
async-trait = "0.1"

[[bin]]
name = "migration"
path = "src/main.rs"
