[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "cli", "sqlx-postgres", "with-time"] }
tokio = { version = "1.0", features = ["full"] }
backend = { path = ".." }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "migration"
path = "src/main.rs"
